--- a/src/RailSharp/RailSharp.csproj
+++ b/src/RailSharp/RailSharp.csproj
@@ -1,7 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <Version>0.1.0</Version>
+    <Authors>maximegelinas</Authors>
+    <Company>SoftFrame</Company>
+    <Copyright>Copyright (c) 2019 SoftFrame</Copyright>
+    <PackageLicenseUrl>https://github.com/softframe/railsharp/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/softframe/railsharp</PackageProjectUrl>
   </PropertyGroup>
 
 </Project>
