--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,7 +46,7 @@ steps:
     displayName: publish artifacts
     #condition: $(and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master')))
     inputs:
-      PathtoPublish: '$(build.artifactStagingDirectory)'
+      pathtoPublish: '$(build.artifactStagingDirectory)'
 
   - task: DotNetCoreCLI@2
     displayName: dotnet nuget push
