Try fix build number variable format and nuget API key

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,4 +55,4 @@ steps:
     inputs:
       command: custom
       custom: nuget
-      arguments: push $(Build.ArtifactStagingDirectory)/*.nupkg --source https://api.nuget.org/v3/index.json --no-service-endpoint --api-key $(nuget.apiKey)
+      arguments: push $(Build.ArtifactStagingDirectory)/*.nupkg --source https://api.nuget.org/v3/index.json --no-service-endpoint --api-key $(nugetApiKey)
