--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -10,7 +10,8 @@
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIconUrl>https://imgur.com/h5hgvh7.png</PackageIconUrl>
-    <IncludeSymbols>false</IncludeSymbols>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <IncludeSource>true</IncludeSource>
     <RepositoryUrl>https://github.com/softframe/railsharp</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
