Uncomment push condition

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,7 +50,7 @@ steps:
 
   - task: DotNetCoreCLI@2
     displayName: Push to NuGet
-    #condition: $(and(succeeded(), eq(Build.SourceBranchName, 'master')))
+    condition: $(and(succeeded(), eq(Build.SourceBranchName, 'master')))
     inputs:
       command: custom
       custom: nuget
