--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,17 +17,10 @@ variables:
   versionPrerelease: 'unstable'
   configuration: 'Release'
 
-name: $(versionPrefix)$(Rev:.r)
-
 steps:
-  - powershell: |
-      $prefix = $Env:VERSIONPREFIX
-      $prerelease = if ($Env:BUILD_SOURCEBRANCHNAME -eq 'master') {''} else {"-$Env:VERSIONPRERELEASE"}
-      $revision = $Env:BUILD_BUILDNUMBER.Substring($Env:BUILD_BUILDNUMBER.LastIndexOf('.'))
-      $version = "$prefix$prerelease$revision"
-      Write-Host "Setting build number to: $version..."
-      Write-Host "##vso[build.updatebuildnumber]$version"
-    displayName: Set build number
+  - task: GitVersionNetCore@5
+    inputs:
+      updateAssemblyInfo: true
 
   - task: DotNetCoreCLI@2
     displayName: Build
