Automatically set CI build number (#3)
* Try set build number with PowerShell step

* Try set build number with GitVersion

* Try GitVersion instead of GitVersionNetCore

* Try with Windows VM image

* Update GitVersion display name [skip ci]

* Remove version variables

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,15 +10,17 @@ trigger:
       - README.md
 
 pool:
-  vmImage: 'Ubuntu-16.04'
+  vmImage: windows-latest
 
 variables:
-  versionPrefix: '0.2'
   configuration: 'Release'
 
-name: $(versionPrefix)$(Rev:.r)
-
 steps:
+  - task: GitVersion@4
+    displayName: Set version
+    inputs:
+      updateAssemblyInfo: true
+
   - task: DotNetCoreCLI@2
     displayName: Build
     inputs:
