--- a/src/RailSharp.Tests/RailSharp.Tests.csproj
+++ b/src/RailSharp.Tests/RailSharp.Tests.csproj
@@ -16,4 +16,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RailSharp\RailSharp.csproj" />
+  </ItemGroup>
+
 </Project>
