Update test projects matching pattern in CI

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ steps:
     displayName: Test
     inputs:
       command: test
-      projects: 'test/**/*.csproj'
+      projects: '**/*test*.csproj'
       configuration: $(configuration)
       nobuild: true
 
