Try add code coverage settings

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ steps:
       projects: '**/*Test*.csproj'
       configuration: $(configuration)
       nobuild: true
-      arguments: '--collect "Code coverage"'
+      arguments: '--collect "Code coverage" --settings ..\CodeCoverage.runsettings'
 
   - task: DotNetCoreCLI@2
     displayName: Pack
