--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ pool:
   vmImage: windows-latest
 
 variables:
-  configuration: 'Release'
+  configuration: Release
 
 steps:
   - task: GitVersion@4
@@ -32,9 +32,21 @@ steps:
     displayName: Test
     inputs:
       command: test
-      projects: 'test/**/*.csproj'
+      projects: '**/*Test*.csproj'
       configuration: $(configuration)
       nobuild: true
+      arguments: /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:Include="[$(System.TeamProject)*]*" /p:Exclude="[*Test*]*"
+
+  - script: |
+      dotnet tool install -g dotnet-reportgenerator-globaltool
+      reportgenerator -reports:$(Build.SourcesDirectory)/**/coverage.cobertura.xml -targetdir:$(Build.SourcesDirectory)/CodeCoverage -reporttypes:"Cobertura"
+    displayName: Generate code coverage report
+
+  - task: PublishCodeCoverageResults@1
+    displayName: Publish code coverage results
+    inputs:
+      codeCoverageTool: Cobertura
+      summaryFileLocation: '$(Build.SourcesDirectory)/CodeCoverage/Cobertura.xml'
 
   - task: DotNetCoreCLI@2
     displayName: Pack
