--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -5,7 +5,7 @@
 
   <PropertyGroup>
     <Version>$(BUILD_BUILDNUMBER)</Version>
-    <Authors>maximegelinas</Authors>
+    <Authors>Maxime Gélinas</Authors>
     <Copyright>Copyright (c) 2018 SoftFrame</Copyright>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
