Use README as homepage

--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -317,8 +317,8 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
-jspm_packages/
+node_modules
+jspm_packages
 
 # TypeScript v1 declaration files
 typings/
@@ -366,3 +366,4 @@ typings/
 ### DocFx ###
 _site
 obj
+index.md
