--- a/docs/package.json
+++ b/docs/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "railsharp-docs",
-  "description": "RailSharp documentation",
+  "name": "railsharp-docs-cli",
+  "description": "RailSharp documentation CLI",
   "scripts": {
     "install": "napa steffen-wilke/darkfx",
     "start": "npm run build && npm run serve",
     "clean": "git add * && git clean -xdf --exclude node_modules/ && git reset HEAD -- .",
-    "build": "dotnet build",
+    "build": "shx cp ../README.md ./index.md && dotnet build",
     "rebuild": "npm run clean && npm run build",
     "serve": "cd ./_site && lite-server"
   },
   "devDependencies": {
     "lite-server": "^2.4.0",
-    "napa": "^3.0.0"
+    "napa": "^3.0.0",
+    "shx": "^0.3.2"
   },
   "private": true
 }
