--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -1,5 +1,4 @@
-- name: Articles
+- name: Docs
   href: articles/
-- name: Api Documentation
-  href: api/
-  homepage: api/index.md
+- name: GitHub
+  href: https://github.com/softframe/railsharp
