--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -87,6 +87,7 @@ steps:
     inputs:
       docPath: docs/_site
       githubUsername: softframe
+      githubEmail: mgelinas@softframe.net
       githubAccessToken: 7c44a82d944cdef3d4e7752b2594cc4f1f65a5d0
       repositoryName: railsharp
       branchName: gh-pages
