--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -1,4 +1,4 @@
-- name: Docs
-  href: articles/
+# - name: Docs
+#   href: articles/
 - name: GitHub
   href: https://github.com/softframe/railsharp
